--- a/legacy.tex
+++ b/legacy.tex
@@ -42,13 +42,10 @@
 
 \maketitle
 \begin{abstract}
-In investigating a population genetics signal, we noticed some discrepancies between the Japanese samples from the 1000 Genomes Project (1kGP) and a more recent high quality dataset.
-We found that the variants causing the signal were only present in individuals with low average sequencing quality.
-We identified $625\ \  p < 10^{-8}$ and $1048\ \ p < 10^{-6}$ single nucleotide polymorphisms (SNPs) that were associated to quality in the 1kGP dataset Japanese individuals.
-These variants are present in nearly all of the populations from the 1kGP. 
+In investigating an unusual population genetics signal we identified a strong and previously unreported batch effect in the 1000 Genomes Project data.We also found that this batch effect led to spurious results in a number of recent publications. 
+We identified spurious mutations by correlating mutations with data quality metrics.
 We then turned our attention to the rest of the 1000 Genomes populations and saw that there were similar batch effects in many of these populations.
 Some of these variants are being imputed onto genotype data and reach genome wide significance in recent publications.
-\todo{update values for all populations}
 \end{abstract}
 
 			\section{Introduction}
@@ -97,35 +94,6 @@ Finally, we will discuss the ways in which it contaminated a number of recent st
 Fortunately, the main conclusions of most of these studies remain supported by other data.
 Yet this begs the question: When should we retire legacy data?
 
-			\section{Results}
-	\subsection{A peculiar mutational signature in Japan}			
-<<<<<<< HEAD
-	
-Harris et al reported an excess of *AC${\rightarrow}$*CC mutations in a portion of the Japanese individuals in the 1kGP.
-While trying to follow up on this observations in a larger Japanese cohort individuals, we did not find this particular signature.
-However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups.
-If two groups of individuals are sampled from the same population, we expect there to be little deviation in allele frequencies between the two groups.
-Moreover, these mismatches were maintained after filtering for low-quality regions of the human genome and standard metrics such as Hardy-Weinberg equilibrium.
-
-When mismatch sites were removed from the 1kGP data, the  *AC${\rightarrow}$*CC signal disappears \ref{SFS}, suggesting a technical artifact rather than a population structure effect.
-Regressions against different quality metrics provided by the 1kGP revealed that mean quality per mapped base pair was an excellent correlate with prevalence of the  *AC${\rightarrow}$*CC mutational signature in 1kGP.
-Individuals with low-quality data have elevated rates of the *AC${\rightarrow}$*CC signature. 
-\sgcomment{supplementary figure of correlations}
-Thus sequences with low mappability harbour mutations that reproduce poorly across studies and exhibit a particular mutational signature. 
-=======
- 
-Harris et al \cite{} reported a $XX\%$  excess of *AC${\rightarrow}$*CC mutations in a portion of the Japanese individuals in the 1kGP. 
-While trying to follow up on this interesting observations in a larger cohort of 886 Japanese individuals, \todo{some info about cohort}, we did not find this particular signature.
-However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of single nucleotide polymorphisms (SNPs) that are private to one or the other cohort. 
-This is unexpected given the similarity of the two populations, and suggests a technical artifact rather than a population structure effect. 
-However, these mismatches were maintained after filtering for low-quality regions of the human genome and standard metrics such as Hardy-Weinberg equilibrium
-
-Once mismatch sites were removed from the 1kGP data, the  *AC${\rightarrow}$*CC signal disappears \ref{SFS}. 
-Regressions against different individual-level quality metrics provided by the 1kGP revealed that mean mapping quality per mapped base pair per individual was an excellent correlate with prevalence of the  *AC${\rightarrow}$*CC mutational signature in 1kGP, with individuals with low-quality data showing elevated rates of the signature. 
-\sgcomment{show supplementary Figure where you did the correlations}
-Thus sequenced individuals with \sgcomment{low mappability harbour?} mutations that reproduce poorly across cohorts and exhibit a particular mutational signature. 
->>>>>>> 6accfc445c3ad8785c7efb015633abadd24008b1
-
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{Figure1.jpg}
 \caption{
@@ -143,41 +111,33 @@ The same analysis was performed independently for each of the populations in the
  \label{SFS}
 \end{figure}
 
-<<<<<<< HEAD
-To identify SNPs that are associated with low quality, we performed a genome-wide association study (GWAS)  \ref{SFS}. 
-We used the mean quality of mapped bases of each individual as the association phenotype.
-Thus, variants that are only found in individuals with low quality data will display significant associations to quality. 
-We were able to identify $625\ \  p < 10^{-8}$ and $1048\ \ p < 10^{-6}$ SNPs that were associated to the average quality of SNPs mapped for an individual \ref{SFS}.  
-This GWAS included 104 individuals, \todo{000} of them were sequenced in phase 1 while the rest were sequenced in phase 3 of the 1kGP.
+			\section{Results}
+	\subsection{A peculiar mutational signature in Japan}			
+	
+Harris and Pritchard reported an excess of *AC${\rightarrow}$*CC mutations in a portion of the Japanese individuals in the 1kGP.
+While trying to follow up on this observations in a larger and more recent Japanese cohort, we did not find this particular signature.
+However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups.
+This is unexpected given the similarity of the two populations, and suggests a technical artifact rather than a population structure effect. 
+Moreover, these mismatches were maintained after filtering for low-quality regions of the human genome and standard metrics such as Hardy-Weinberg equilibrium.
+
+When mismatch sites were removed from the 1kGP data, the  *AC${\rightarrow}$*CC signal disappears \ref{SFS}.
+Regressions against different individual-level quality metrics provided by the 1kGP revealed that mean quality per mapped base pair per individual was an excellent correlate with prevalence of the  *AC${\rightarrow}$*CC mutational signature in 1kGP. 
+Individuals with low-quality data showing elevated rates of the signature. \ref{PC1_Correlation}
+Thus sequences with low mappability harbour mutations that reproduce poorly across studies and exhibit a particular mutational signature. 
+
+To identify SNPs that are likely to reproduce poorly across cohorts (without having access to a second cohort), we performed a genome-wide association study (GWAS) in the JPT for SNPs that correlate strongly with low quality \ref{SFS}. 
+Using the linear regression as implemented in PLINK, we were able to identify $625$ snips with $p < 10^{-8}$ and $1048$ snps with $ p < 10^{-6}.$ 
+While identifying putative low-quality SNPs to exclude, using a higher $p$-value threshold increases the stringency of the filtering (i.e., the traditional genome-wide significance threshold might not be a good guide for filtering).  
+ This GWAS included 104 Japanese individuals, \todo{000} of which were sequenced in phase 1 while the rest were sequenced in phase 3 of the 1kGP.
 The variants that are associated to the quality of mapped bases have a 10 fold enrichment in *AC${\rightarrow}$*CC mutations. 
 
-The GWAS has a power limit of 5\% minor allele frequency (MAF), many rare alleles found in individuals with low-quality data remain unidentifiable using association techniques.
+The signal is enriched in GWAS snps, but residual signal remains because our GWAS has a power limit of 5\% minor allele frequency (MAF) resulting in many rare alleles found in individuals with low-quality data remaining unidentifiable using association techniques.
 For this reason, the heterogeneously distributed signal persisted in the 1kGP Japanese even after filtering the variants that were significantly associated to quality.
 The *AC${\rightarrow}$*CC mutational signal is limited to individuals with low quality sequencing data.
 Therefore, the removal of individuals with average qualities below 30 successfully removes the signal.
-
-By taking advantage of the larger, higher quality dataset, we were also able to get rid of this signal by filtering all the variants above 1\% in the 1kGP Japanese but missing from the \todo{NAG} data.
-This suggests that while the GWAS approach can identify some of the low hanging bad apples, there are likely more of these false positives nested inside these legacy cohorts.
+While the GWAS approach can identify some of the low hanging bad apples, there are likely more of these false positives nested inside these legacy cohorts.
 
 %Many of the populations in the 1kGP do not have higher quality counterparts which means that identifying questionably low quality data must be done ad hoc.
-=======
-To identify SNPs that are likely to reproduce poorly across cohorts (without having access to a second cohort), we performed a genome-wide association study (GWAS) in the JPT for SNPs that correlate strongly with low quality \ref{SFS}. Using the linear regression as implemented in PLINK, we were able to identify $625$ snips with $p < 10^{-8}$ and $1048$ snps with $ p < 10^{-6}.$ While identifying putative low-quality snps to exclude, using a higher $p$-value threshold increases the stringency of the filtering (i.e., the traditional genome-wide significance threshold might not be a good guide for filtering).  
- This GWAS included 104 Japanese individuals, \todo{000} of which were sequenced in phase 1 while the rest were sequenced in phase 3 of the 1kGP.
-The variants that are associated to the quality of mapped bases have an enrichment in *AC${\rightarrow}$*CC mutations. 
-\sgcomment{Signal is enriched in GWAS snps, but residual signal remains because...}
-
-
-
-A GWAS threshold of $10^{-6}$ means that variants of less than 5\% minor allele frequency  (MAF) cannot be significantly associated, even if they are only found in low-quality sequences. 
-They therefore remain unidentifiable using association techniques.
-For this reason, the *AC${\rightarrow}$*CC mutational signal persisted in the 1kGP Japanese even after filtering the variants that were significantly associated to quality metrics.
-The *AC${\rightarrow}$*CC mutational signal is limited to individuals with low quality sequencing data, as the removal of individuals with average qualities below 30 successfully removes the signal.
-
-
-
-By taking advantage of the higher quality dataset, we were also able to get rid of this signal by filtering all the variants above 1\% in the 1kGP Japanese but missing from the NAG data. \sgcomment{redundant}
-This suggests that while the GWAS approach can identify some of the low hanging bad apples, there are likely more of these false positives nested inside these legacy cohorts. 
->>>>>>> 6accfc445c3ad8785c7efb015633abadd24008b1
 
 	\subsection{Sequencing quality over time}
 The results of the GWAS performed on the Japanese from the 1kGP lead us to consider whether any other populations in the 1kGP also had similar issues with data quality.
@@ -194,7 +154,6 @@ By 2011, older sequencing technologies are phased out, and method development so
 \end{figure}
 
 	\subsection{Overlap of significant SNPs}
-
 We applied the same GWAS approach on the other 1kGP populations as it appears to capture a large portion of problematic sites. 
 We found that 25 of the 26 populations in the 1kGP had SNPs significantly associated to the average quality of mapped bases per individual.
 \todo{Supplemental Figures : all the GWAS results for each population}
@@ -225,43 +184,43 @@ They also removed rare alleles and alleles with high degrees of missingness.
 Despite using the state of the art quality controls, these erroneous variants managed not only to be imputed onto real genotype data, but they also reached genome wide significance for biological traits. 
 
 \begin{center}
- \begin{tabular}{||c c c c||} 
+ \begin{tabular}{||c c c c c||} 
  \hline
-Author & Year & Journal & RSID \\ [0.5ex] 
+Author & Year & Journal & RSID & PMID \\ [0.5ex] 
  \hline\hline
-Comuzzie AG &	2012	 &PLoS One &	rs9469457\\ 
+Comuzzie AG &	2012	 &PLoS One &	rs9469457&23251661\\ 
  \hline
-Smith JG &	2012	 & Circ Cardiovasc Genet	& rs7729539\\ 
+Smith JG &	2012	 & Circ Cardiovasc Genet	& rs7729539&23166209\\ 
  \hline
-Ebejer JL	& 2013	 & Twin Res Hum Genet & 	rs6057648\\ 
+Ebejer JL	& 2013	 & Twin Res Hum Genet & 	rs6057648&23527680\\ 
  \hline
-Zeng Z	& 2014 &	Caries Res	& rs10495332\\ 
+Zeng Z	& 2014 &	Caries Res	& rs10495332&24556642\\ 
  \hline
-Park SL & 	2015	 & PLoS One	& rs113626797\\ 
+Park SL & 	2015	 & PLoS One	& rs113626797&26053186\\ 
  \hline
-Parmar PG &	2016	 & Circ Cardiovasc Genet	& rs12370001\\ 
+Parmar PG &	2016	 & Circ Cardiovasc Genet	& rs12370001&26969751\\ 
  \hline
-Spada J & 	2016	 & J Sleep Res &	rs12452225\\ 
+Spada J & 	2016	 & J Sleep Res &	rs12452225&27126917\\ 
  \hline
-Astle WJ	& 2016 &	Cell	 & rs533229216\\ 
+Astle WJ	& 2016 &	Cell	 & rs533229216&27863252\\ 
  \hline
- Ahola-Olli AV &	2017 &	Am J Hum Genet &	rs76842834\\ 
+ Ahola-Olli AV &	2017 &	Am J Hum Genet &	rs76842834&27989323\\ 
  \hline
-Liu TC	& 2017 &	JCI Insight &	rs12481514\\ 
+Liu TC	& 2017 &	JCI Insight &	rs12481514&28352666\\ 
  \hline
-  McKay JD & 2017 &	Nature Genetics & 	rs13191445\\ 
+  McKay JD & 2017 &	Nature Genetics & 	rs13191445&28604730\\ 
  \hline
-Zhou H &	2017	 & JAMA Psychiatry &	rs11179306\\ 
+Zhou H &	2017	 & JAMA Psychiatry &	rs11179306&	29071344\\ 
  \hline
-Tian C	& 2017	 &Nature Communications	 & rs67491322\\ 
+Tian C	& 2017	 &Nature Communications	 & rs67491322&28928442\\
  \hline
-Qian DC	& 2017 &	BMC Genomics &	rs77576211\\ 
+Qian DC	& 2017 &	BMC Genomics &	rs77576211&28927378\\ 
  \hline
-Michailidou K	& 2017	 & Nature &	rs76092474\\ 
+Michailidou K	& 2017	 & Nature &	rs76092474&29059683\\ 
  \hline
-& & & rs80274284, rs201130852,\\ 
-Mandage R &	2017	 & PLoS One	 & rs200655768, rs184202621,\\ 
-& & & rs201255786, rs201761909\\ 
+& & & rs80274284, rs201130852,&\\
+Mandage R &	2017	 & PLoS One	 & rs200655768, rs184202621,&28654678\\
+& & & rs201255786, rs201761909&\\
  \hline
  \end{tabular}
 \end{center}
@@ -291,13 +250,11 @@ This suggests that while the GWAS we performed is a step in the right direction,
 %issues with PCR?
 %repetitive regions, GC bias...
 
-
 \subsection{Imputation}
 Imputation of genotype data is a probabilistic method that infers the bases of a given genome based on its similarity to a set of reference genomes.
 While on average, two humans differ in about 1/10,000 bases, this number is \todo{lower} in closely related individuals, and \todo{higher} in individuals from different continental origins.
 Modern chip sequencing will provide the genotype information for over 1 million bases of the genome.
 The unique combination of genotyped bases can be enough to identify haplotype blocks that are identical by descent in individuals form the reference database.
-
 
 The accuracy of imputation depends on the size of the reference database; this varies significantly from one population to another.
 This means that individuals with ancestry that is less well represented in the reference database will have lower accuracy of imputation.
@@ -372,6 +329,13 @@ Using the Michigan Imputation Server, we imputed the genotype data from 1kGP
 \section{Acknowledgments}
 We would like to thank Kelly Harris for sharing her mutation spectrum pipelines.
  
+\subsection{Supplementary Figures}
+\begin{figure}
+\includegraphics[width=\hsize,keepaspectratio]{PC1_Correlation.jpg}
+\caption{Regressions against mean quality per mapped base pair per individual is an excellent correlate with prevalence of the  *AC${\rightarrow}$*CC mutational signature in 1kGP, with individuals with low-quality data showing elevated rates of the signature.  }
+ \label{PC1_Correlation}
+\end{figure}
+
  
 \bibliography{Legacy.bib}
 
