Updated Figure 1 with regression values

--- a/legacy.tex
+++ b/legacy.tex
@@ -176,7 +176,7 @@ The same variants identified as being low quality independently in each populati
 The state of the art imputations servers use a combination of many databases including many that are not freely available.
 For this reason, the details of the methods used to impute genomic data are not publicly available either.
 In order to investigate the proportion of variants that we've identified as being associated to quality that are being imputed, we submitted the genotype data from the 1kGP and imputed it using the Michigan Imputation Server.
-We found that \todo{~30\%} of the SNPs we identified as being associated with quality were imputed.
+We found that all of the SNPs we identified as being associated with quality were imputed.
 
 	\subsection{Found to be included in other GWA studies}
 Once we identified SNPs that were clearly associated with low quality, we searched the literature for any GWAS that might have called these erroneous variants as being significantly correlated with some biological trait. 
