Updated Figure 3 (minor edits to F1)

--- a/legacy.tex
+++ b/legacy.tex
@@ -26,6 +26,7 @@
 
 \author[1,2]{Luke Anderson-Trocm\'e}
 \author[1,2]{Mathieu Bourgey}
+\author[1,2]{Rick Farouni}
 \author[3]{Fumihiko Matsuda (and coauthors)}
 \author[1,2]{Simon Gravel}
 
@@ -130,7 +131,7 @@ To identify SNPs that are likely to reproduce poorly across cohorts (without hav
 \luke{NEW:} 
 Whereas the majority of GWAS use linear regression predicting a phenotype based on genotype, our method does the inverse.
 We are looking for loci where the genotypes are predictable based on the data quality scores.
-We were able to identify \todo{000} SNPs with $p < 10^{-8}$ and \todo{000} SNPs with $ p < 10^{-6}$.
+We were able to identify 587 SNPs with $p < 10^{-8}$ and 1034 SNPs with $ p < 10^{-6}$.
 While identifying putative low-quality SNPs to exclude, using a higher $p$-value threshold increases the stringency of the filtering (i.e., the traditional genome-wide significance threshold might not be a good guide for filtering).  
  %This GWAS included 104 Japanese individuals, 74 of which were sequenced in using the Genome Analyzer II while the rest were sequenced using the HiSeq 2000 of the 1kGP.
 The variants that are associated to the quality of mapped bases have an enrichment in *AC${\rightarrow}$*CC mutations. 
