--- a/legacy.tex
+++ b/legacy.tex
@@ -100,15 +100,15 @@ Yet this begs the question: When should we retire legacy data?
 \includegraphics[width=\hsize,keepaspectratio]{Figure1.jpg}
 \caption{
 \textbf{A} 
-Mutation spectrum of the 1048 variants that reached a genome wide significance with a p value less than $p < 10^{-6}$  in a GWAS of sequencing quality. 
-There is a 10 fold enrichment in *AC${\rightarrow}$*CC mutations. 
+Mutation spectrum of the 1034 variants that reached a genome wide significance with a p value less than $p < 10^{-6}$  in a GWAS of sequencing quality. 
+There majority of the variants with significant associations to quality have the *AC${\rightarrow}$*CC mutational pattern. There is also an slight enrichment in GA*${\rightarrow}$GG* and GC*${\rightarrow}$GG* mutations. These three enrichments can be summarized as G**${\rightarrow}$GG*. (note: the reverse complement of *AC${\rightarrow}$*CC is GT*${\rightarrow}$GG*)
 \textbf{B} 
-Joint frequency spectrum plot of the Japanese from the 1kGP and a more recent dataset.
-Crosses ( + ) are variants that reached genome wide significance in a GWA of sequencing quality. 
+Joint frequency spectrum plot of the Japanese from the 1kGP and a more recent Nagahama dataset.
+Crosses ( + ) are variants that reached genome wide significance in a GWAS of sequencing quality. 
 The histogram on the left of the plot is the distribution of significant variants. 
-The lowest frequency variant able to reach genome wide significance is 5\%.
+The dotted line is at 5\% allele frequency. 
 \textbf{C} 
-Genome wide association of the average quality of mapped bases for the 104 Japanese individuals included in the 1kGP. This GWAS identified $625\ \  p < 10^{-8}$ and $1048\ \ p < 10^{-6}$ SNPs that were associated to the average quality of SNPs mapped for an individual
+Genome wide association of the average quality of mapped bases for the 104 Japanese individuals included in the 1kGP. This GWAS identified $587\ \  p < 10^{-8}$ and $1034\ \ p < 10^{-6}$ SNPs that were associated to the average quality of SNPs mapped for an individual
 The same analysis was performed independently for each of the populations in the 1kGP. }
  \label{SFS}
 \end{figure}
@@ -116,7 +116,7 @@ The same analysis was performed independently for each of the populations in the
 			\section{Results}
 	\subsection{A peculiar mutational signature in Japan}			
 	
-Harris and Pritchard reported an excess of *AC${\rightarrow}$*CC mutations in a portion of the Japanese individuals in the 1kGP.
+Harris and Pritchard reported an excess of *AC${\rightarrow}$*CC mutations in a portion of the Japanese individuals in the 1kGP.\cite{Harris2015a}
 While trying to follow up on this observations in a larger and more recent Japanese cohort, we did not find this particular signature.
 However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups.
 This is unexpected given the similarity of the two populations, and suggests a technical artifact rather than a population structure effect. 
@@ -124,7 +124,7 @@ Moreover, these mismatches were maintained after filtering for low-quality regio
 
 When mismatch sites were removed from the 1kGP data, the  *AC${\rightarrow}$*CC signal disappears \ref{SFS}.
 Regressions against different individual-level quality metrics provided by the 1kGP revealed that mean quality per mapped base pair per individual was an excellent correlate with prevalence of the  *AC${\rightarrow}$*CC mutational signature in 1kGP. 
-Individuals with low-quality data showing elevated rates of the signature (see Supplementary Figure \ref{PC1_Correlation}). \sgcomment{fix ref to figs}
+Individuals with low-quality data showing elevated rates of the signature (see Supplementary Figure \ref{PC1_Correlation}).
 Thus sequences with low mappability harbour mutations that reproduce poorly across studies and exhibit a particular mutational signature. 
 
 To identify SNPs that are likely to reproduce poorly across cohorts (without having access to a second cohort), we performed a genome-wide association study (GWAS) in the JPT for SNPs that correlate strongly with low quality \ref{SFS}.
@@ -136,7 +136,7 @@ While identifying putative low-quality SNPs to exclude, using a higher $p$-value
  %This GWAS included 104 Japanese individuals, 74 of which were sequenced in using the Genome Analyzer II while the rest were sequenced using the HiSeq 2000 of the 1kGP.
 The variants that are associated to the quality of mapped bases have an enrichment in *AC${\rightarrow}$*CC mutations. 
 
-The signal is enriched in GWAS snps, but residual signal remains because our GWAS has a power limit of 5\% minor allele frequency (MAF) resulting in many rare alleles found in individuals with low-quality data remaining unidentifiable using association techniques.
+The signal is enriched in GWAS SNPs, but residual signal remains presumably because many rare alleles found in individuals with low-quality data remain unidentifiable using association techniques.
 For this reason, the heterogeneously distributed signal persisted in the 1kGP Japanese even after filtering the variants that were significantly associated to quality.
 The *AC${\rightarrow}$*CC mutational signal is limited to individuals with low quality sequencing data.
 Therefore, the removal of individuals with average qualities below 30 successfully removes the signal.
@@ -160,15 +160,18 @@ By 2011, older sequencing technologies are phased out, and method development so
 
 	\subsection{Overlap of significant SNPs}
 We applied the same GWAS approach on the other 1kGP populations as it appears to capture a large portion of problematic sites. 
-We found that 25 of the 26 populations in the 1kGP had SNPs significantly associated to the average quality of mapped bases per individual.
+We found that 24 of the 26 populations in the 1kGP had SNPs significantly associated to the average quality of mapped bases per individual.
 \todo{Supplemental Figures : all the GWAS results for each population}
-Comparing the results of each independent GWAS, we were able to identify over 3625 variants that were independently associated to low quality in at least two populations  \ref{OverLap}. 
+Comparing the results of each independent GWAS, we were able to identify over 3493 variants that were independently associated to low quality in at least two populations  \ref{OverLap}. 
 
 \begin{figure*}
 \includegraphics[width=\hsize,keepaspectratio]{SNPOverlap6.jpg}
 
 \caption{Overlap of SNPs identified independently to be associated with quality. 
-The populations that have the most low-quality individuals also have the most low-quality variants. 
+The size of the crosses ( + ) are proportional to the -log10(p) value of that SNP.
+The x axis is ranked by the frequency of occurrence of a SNP, then by genomic position.
+The line plot underneath shows the number of populations for which a variant has reached significance.
+The populations that tend to have the most low-quality individuals also tend to have the most variants associated to quality. 
 The same variants identified as being low quality independently in each population are found in other populations. }
   \label{OverLap}
 \end{figure*}
@@ -176,12 +179,13 @@ The same variants identified as being low quality independently in each populati
 	\subsection{Imputation}
 The state of the art imputations servers use a combination of many databases including many that are not freely available.
 For this reason, the details of the methods used to impute genomic data are not publicly available either.
-In order to investigate the proportion of variants that we've identified as being associated to quality that are being imputed, we submitted the genotype data from the 1kGP and imputed it using the Michigan Imputation Server.
+In order to investigate the proportion of variants that we've identified as being associated to quality that are being imputed, we submitted genotype data from the 1kGP and imputed it using the Michigan Imputation Server.
 We found that all of the SNPs we identified as being associated with quality were imputed.
+This suggests that the imputation reference panel includes individuals with low sequence quality, as well as the variants that have been shown to be associated to quality. 
 
 	\subsection{Found to be included in other GWA studies}
 Once we identified SNPs that were clearly associated with low quality, we searched the literature for any GWAS that might have called these erroneous variants as being significantly correlated with some biological trait. 
-Using the NHGRI-EBI Catalog of published genome-wide association studies we queried the rsIDs of the SNPs we identified as being low quality and found 17 recent publications that had found at least one of the variants to have reached genome wide significance in their study.
+Using the NHGRI-EBI Catalog of published genome-wide association studies we queried the rsIDs of the SNPs we identified as being low quality and found \todo{000} recent publications that had found at least one of the variants to have reached genome wide significance in their study.
 
 These studies used the 1kGP as the reference database for imputation. %and one used the 1kGP cell cultures and sequence data. 
 They used strict quality thresholds, including population genetic statistical tests such as the Hardy-Weinberg equilibrium test, deviations in expected allele frequency and sequencing data quality thresholds. 
@@ -193,38 +197,7 @@ Despite using the state of the art quality controls, these erroneous variants ma
  \hline
 Author & Year & Journal & RSID & PMID \\ [0.5ex] 
  \hline
-Comuzzie AG \emph{et al}, PLoS One (2012)  &	2012	 &PLoS One &	rs9469457&23251661\\ 
- 
-Smith JG &	2012	 & Circ Cardiovasc Genet	& rs7729539&23166209\\ 
- 
-Ebejer JL	& 2013	 & Twin Res Hum Genet & 	rs6057648&23527680\\ 
- 
-Zeng Z	& 2014 &	Caries Res	& rs10495332&24556642\\ 
- 
-Park SL & 	2015	 & PLoS One	& rs113626797&26053186\\ 
- 
-Parmar PG &	2016	 & Circ Cardiovasc Genet	& rs12370001&26969751\\ 
- 
-Spada J & 	2016	 & J Sleep Res &	rs12452225&27126917\\ 
-Astle WJ	& 2016 &	Cell	 & rs533229216&27863252\\ 
- 
- Ahola-Olli AV &	2017 &	Am J Hum Genet &	rs76842834&27989323\\ 
- 
-Liu TC	& 2017 &	JCI Insight &	rs12481514&28352666\\ 
- 
-  McKay JD & 2017 &	Nature Genetics & 	rs13191445&28604730\\ 
- 
-Zhou H &	2017	 & JAMA Psychiatry &	rs11179306&	29071344\\ 
- 
-Tian C	& 2017	 &Nature Communications	 & rs67491322&28928442\\
- 
-Qian DC	& 2017 &	BMC Genomics &	rs77576211&28927378\\ 
- 
-Michailidou K	& 2017	 & Nature &	rs76092474&29059683\\ 
- 
-& & & rs80274284, rs201130852,&\\
-Mandage R &	2017	 & PLoS One	 & rs200655768, rs184202621,&28654678\\
-& & & rs201255786, rs201761909&\\
+
  \hline
  \end{tabular}
 \end{center}
@@ -250,25 +223,14 @@ We were able to identify many variants with frequencies below \todo{the power th
 However even the GWAS is limited by power as we were able to identify \todo{000} more variants that were missing in a higher quality dataset but present in over 1\% of the 1kGP Japanese data. 
 This suggests that while the GWAS we performed is a step in the right direction, the GWAS is not sufficient because the data is not reliable in the first place. 
 
-%\subsection{Technical Source of Error}
+\subsection{Technical Source of Error}
+%B tail trimming  (Minoche et al. Genome Biology 2011)
 %issues with PCR?
 %repetitive regions, GC bias...
 
-\subsection{Imputation}
-Imputation of genotype data is a probabilistic method that infers the bases of a given genome based on its similarity to a set of reference genomes.
-While on average, two humans differ in about 1/10,000 bases, this number is \todo{lower} in closely related individuals, and \todo{higher} in individuals from different continental origins.
-Modern chip sequencing will provide the genotype information for over 1 million bases of the genome.
-The unique combination of genotyped bases can be enough to identify haplotype blocks that are identical by descent in individuals form the reference database.
+\subsection{GWAS from other papers}
+%The only way to distinguish some of these more covert false positives is to use statistical tests associating the quality metrics of each position relative to each individual. 
 
-The accuracy of imputation depends on the size of the reference database; this varies significantly from one population to another.
-This means that individuals with ancestry that is less well represented in the reference database will have lower accuracy of imputation.
-To overcome this bias, reference databases are often combined to increase the sample size and in turn, the accuracy of imputation.
-
-\subsection{GWA studies from other papers}
-Since these variants are present in more than one population from the 1kGP, they are more likely to be associated to biological traits as they would appear to be like any other variant that is shared among multiple populations. 
-The only way to distinguish some of these more covert false positives is to use statistical tests associating the quality metrics of each position relative to each individual. 
-
-%\luke{due to the temporal nature of the batch effects, and because entire populations were sequenced in one centre on one day, the false positives are more likely to cluster with population structure or case/control?}
 
 			\section{Conclusion}
 Our method identifies spurious mutations by correlating mutations with data quality metrics. 
@@ -314,18 +276,16 @@ Several mask files were applied to remove regions of the genome that might be lo
 The  1000 Genomes \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/accessible_genome_masks/20141020.strict_mask.whole_genome.bed}{strict mask} was used to remove low quality regions of the genome , highly conserved regions were removed using the \href{http://hgdownload.cse.ucsc.edu/goldenPath/hg19/database/phastConsElements100way.txt.gz}{phastCons100way} mask file and highly repetitive regions were also removed using the \href{http://hgdownload.cse.ucsc.edu/goldenpath/hg19/database/nestedRepeats.txt.gz}{NestedRepeats} mask file from RepeatMasker. 
 Furthermore, only diallelic autosomal SNPs were considered, with missingness below 0.01, MAF less than 0.1, and MAF greater than 0.9.
 
-\subsection{Genome Wide Association}
-
-Using PLINK v1.90b4.4 we ran a linear genome wide association study independently for each population of the 1kGP. We used the average quality of mapped bases per individual as the phenotype for the analysis. We controlled for population structure by including the first 4 principle components of a PCA of each population with available genotype data, however, considering that population structure did not affect the number of variants associated to quality, and that not all populations had genotype data readily available, we did not include these in the final analysis. 
+\subsection{Genome Wide Association Study}
+Using an in-house R script, we performed a logistic regression using the glm package. \cite{[R and GLM]} We performed this statistical test independently for each population of the 1kGP. The deviations from the null model for each test was used to compute the chi-squared p value for each SNP for each population. Since each deviation follows a chi-squared distribution, the sum of the deviations also follow a chi-squared distribution. However, since not all SNPs are present in all populations, when computing the p values for the summed deviations, the degrees of freedom were adjusted to the number of populations tested. 
 
 \subsection{Mutation Spectrum}
-We calculated the mutation spectrum for each list of significant SNPs for each population.  
-
-We also compared the mutation spectrum ratio between populations using a modified version of the methods used in Harris et al. 2017. 
+We calculated the mutation spectrum of triplets for the list of significant SNPs for the JPT population using a similar method as described in Harris et al. 2017. 
+We also calculated the spectrum of triplets of a list the same number of randomly selected SNPs as a control.
 
 \subsection{Imputation}
-Using the Michigan Imputation Server, we imputed the genotype data from 1kGP
-
+Using the Michigan Imputation Server, we imputed the genotype data from 1kGP for chromosomes 1 and 2. 
+The VCF file returned from the server was then used to search for the number of significant SNPs imputed.
 
 \section{Code Availability}
 \todo{here is where I will put my git hub}
